[gd_scene load_steps=8 format=3 uid="uid://odjjnfn1ehsl"]

[ext_resource type="Script" uid="uid://2jp4kl7cpy5r" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="PackedScene" uid="uid://b23n3hqxfi6fi" path="res://Player/components/scenes/input_component.tscn" id="2_gwnis"]
[ext_resource type="Texture2D" uid="uid://cq40re7ihvfke" path="res://Assets/player_placeholder.png" id="3_btcbx"]
[ext_resource type="PackedScene" uid="uid://d18cwnoi5vvt7" path="res://Player/components/scenes/movement_component.tscn" id="3_k53q1"]
[ext_resource type="PackedScene" uid="uid://bqqkeqs5eyox2" path="res://Player/components/scenes/fire_component.tscn" id="5_fhl08"]
[ext_resource type="PackedScene" uid="uid://bpyj7blwa8iwi" path="res://Player/components/scenes/rotation_component.tscn" id="5_k53q1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk3v5"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("input_component", "movement_component", "rotation_component", "fire_component")]
script = ExtResource("1_l8h54")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
rotation_component = NodePath("RotationComponent")
fire_component = NodePath("FireComponent")

[node name="InputComponent" parent="." instance=ExtResource("2_gwnis")]

[node name="MovementComponent" parent="." instance=ExtResource("3_k53q1")]

[node name="RotationComponent" parent="." instance=ExtResource("5_k53q1")]

[node name="FireComponent" parent="." instance=ExtResource("5_fhl08")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bk3v5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_btcbx")
